@@ -1,3 +1,13 @@
+2004-02-12  Dan Razzell	<research@starfishsystems.ca>
+
+	* tls.c:	Allow verify callback to return empty result.
+	* tls.htm:	Document callback behaviors.
+
+2004-02-11  Dan Razzell	<research@starfishsystems.ca>
+
+	* tests/tlsIO.test:
+	* remote.tcl:	Complete private key name changes from 2001-06-21.
+
 2004-02-03  Dan Razzell <research@starfishsystems.ca>
 
 	* Makefile.in:	Removed circular dependency.
